Works without casting with collect(Collectors.toList())